--- a/site/src/css/custom.css
+++ b/site/src/css/custom.css
@@ -4,6 +4,18 @@
  * work well for content-centric websites.
  */
 
+/* Self-hosted Inter variable font (GDPR: avoids Google Fonts CDN) */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 100 900;
+  src: url('/fonts/Inter-Variable-Latin.woff2') format('woff2');
+  unicode-range:
+    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
+    U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 /* You can override the default Infima variables here. */
 :root {
   /* Primary red color palette */
